apps/ds389/base/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  labels:
    istio-injection: enabled
  name: quay
spec: {}
status: {}
