apps/ds389/base/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ds389
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: ds389
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "False"
      creationTimestamp: null
      labels:
        app: ds389
        version: v1
    spec:
      containers:
      - env:
        - name: POPULATE
          value: "100"
        - name: SYSTEMD_SLEEP
          value: "3"
        image: localhost/ds389:next
        imagePullPolicy: Always
        name: ds389
        ports:
        - containerPort: 10389
          name: tcp-10389
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /dev/shm
          name: devshm
        - mountPath: /etc/dirsrv/slapd-ldap
          name: config
        - mountPath: /var/lib/dirsrv
          name: data
        - mountPath: /root/dscreate.template
          subPath: dscreate.template
          name: template
        - mountPath: /var/run/secrets/ds389
          name: ds389-config-credentials
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      volumes:
      - name: devshm
        emptyDir:
          medium: Memory
      - name: config
        persistentVolumeClaim:
          claimName: pvc-ds389-cfg
      - name: data
        persistentVolumeClaim:
          claimName: pvc-ds389-data
      - name: ds389-config-credentials
        secret:
          secretName: ds389-config-credentials
      - configMap:
          defaultMode: 420
          name: template
        name: template
---
apiVersion: v1
kind: Service
metadata:
  name: ds389
spec:
  ports:
  - name: tcp-10389
    port: 10389
    protocol: TCP
    targetPort: 10389
  - name: tcp-19090
    port: 19090
    protocol: TCP
    targetPort: 9090
  selector:
    app: ds389
  sessionAffinity: None
  type: ClusterIP
