apps/ds389/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ds389-fe
spec:
  ingressClassName: traefik
  rules:
  - host: ds389.example.com
    http:
      paths:
      - backend:
          service:
            name: ds389
            port:
              number: 19090
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
